--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -79,7 +79,8 @@
   answer: "Samtidig"
 - question: "In the end"
   answer: "Til Slutt"
-- question: "Et par ganger"
-  answer: "A couple of times (Han ringte meg et par ganger i går)"
+- question: "A couple of times"
+  answer: "Han ringte meg et par ganger i går"
+
 
 
