--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -428,3 +428,10 @@
     Jeg ble overrasket over resultatet
     gaven skal være en overraskelse
     (en overraskelse=a surprise)
+
+- question: "ødelagt"
+  answer: |
+    broken/damaged/spoiled (adjective)
+    Telefonen er ødelagt
+    Vinduet ble ødelagt under stormen
+    Maten ble ødelagt fordi kjøleskapet ikke fungerte 
