--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -429,9 +429,10 @@
     gaven skal være en overraskelse
     (en overraskelse=a surprise)
 
-- question: "ødelagt"
+- question: "å ødelegge"
   answer: |
-    broken/damaged/spoiled (adjective)
-    Telefonen er ødelagt
-    Vinduet ble ødelagt under stormen
-    Maten ble ødelagt fordi kjøleskapet ikke fungerte 
+    to destroy/ruin/break (ødelegger-ødela-har ødelagt)
+    ødelagt=broken (as adjective)
+    Jeg ødela mobilen min → I broke my phone
+    Regnet ødela festen → The rain ruined the party
+    Maten ble ødelagt fordi kjøleskapet ikke fungert
