--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -433,6 +433,6 @@
   answer: |
     to destroy/ruin/break (ødelegger-ødela-har ødelagt)
     ødelagt=broken (as adjective)
-    Jeg ødela mobilen min → I broke my phone
-    Regnet ødela festen → The rain ruined the party
+    Jeg ødela mobilen min
+    Regnet ødela festen 
     Maten ble ødelagt fordi kjøleskapet ikke fungert
