--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -1,7 +1,7 @@
 - question: "forskjellig"
   answer: |
     different (Forskjellige typer mat)
-    forskjell (difference): en forskjell-forskjellen-forskjeller-forskjellene
+    forskjell (difference): forskjellen-forskjeller-forskjellene
     Det er en stor forskjell mellom dem.
     
 - question: "forsinket"
@@ -29,12 +29,12 @@
   answer: |
     afraid; redd for=afraid of 
     Han er redd for å fly
-    redningsmann = saviour
 
 - question: "å redde"
   answer: |
     to save/rescue
     Brannmannen reddet mange mennesker
+    redningsmann = saviour
 
 - question: "å beskytte"
   answer: |
@@ -49,7 +49,8 @@
 
 - question: "skikkelig"
   answer: |
-    really/truly (Det er skikkelig bra!)
+    really/truly
+    Det er skikkelig bra!
 
 - question: "enda"
   answer: |
@@ -66,12 +67,12 @@
 
 - question: "å vare"
   answer: |
-    to last / to continue 
+    to last/to continue 
     Hvor lenge varer den? = How long does it last?
 
 - question: "å sprekke"
   answer: |
-    to crack / to pop 
+    to crack/to pop 
     Ja, ballonger som sprekker
 
 - question: "å bestå"
@@ -436,3 +437,10 @@
     Jeg ødela mobilen min
     Regnet ødela festen 
     Maten ble ødelagt fordi kjøleskapet ikke fungert
+
+- question: "sliten"
+  answer: |
+    tired/exhausted/worn-out (sliten-slitent-slitne)
+    Hun føler seg veldig sliten i dag
+    et slitent hus → a worn-out house
+    slitne sko
