--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -444,3 +444,12 @@
     Hun føler seg veldig sliten i dag
     et slitent hus → a worn-out house
     slitne sko
+
+- question: "vant (adjektiv)"
+  answer: |
+    used to/accustomed to(vant-til/med)
+    Han er vant til kulda
+    Jeg er ikke vant til å stå opp så tidlig
+    Vi er vant med dette systemet. → We are familiar with this system.
+    "vant" ≠ "vant" (preteritum av `å vinne=won`)
+  
