--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -445,7 +445,7 @@
     et slitent hus → a worn-out house
     slitne sko
 
-- question: "vant (adjektiv)"
+- question: "vant"
   answer: |
     used to/accustomed to(vant-til/med)
     Han er vant til kulda
