--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -450,6 +450,6 @@
     used to/accustomed to(vant-til/med)
     Han er vant til kulda
     Jeg er ikke vant til å stå opp så tidlig
-    Vi er vant med dette systemet. → We are familiar with this system.
-    "vant" ≠ "vant" (preteritum av `å vinne=won`)
+    Vi er vant med dette systemet → We are familiar with this system
+    vant ≠ vant(preteritum av `å vinne=won`)
   
