--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -455,4 +455,22 @@
     Vi er vant med dette systemet
     vant ≠ vant(preteritum av `å vinne=won`)
 
+- question: "å delta"
+  answer: |
+    to participate (deltar-deltok-har deltatt)
+    del+ta=take part
+    Norge har ikke deltatt i VM på 28 år
+    men neste år skal de det.
+    VM=verdensmesterskap=World Cup
+
+- question: "å dele"
+  answer: |
+    to share/divide/split(deler-delte-har delt)
+    Jeg deler maten med deg (deler med)
+    Vi deler på ansvaret (share responsibility)
+    De delte på oppgaven (split the task)
+    Læreren deler opp klassen i grupper
+    Veien deler seg her → The road splits here
+
+
   
