--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -83,4 +83,5 @@
   answer: "Han ringte meg et par ganger i går"
 - question: "The only friend I had was Kari"
   answer: "Den eneste vennen jeg hadde var Kari"
-
+- question: "you make the most of it"
+  answer: "Du må bare gjør det beste ut av det!"
