--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -472,5 +472,10 @@
     Læreren deler opp klassen i grupper
     Veien deler seg her → The road splits here
 
-
-  
+- question: "bærekraft"
+  answer: |
+    sustainability
+    bære = to carry
+    kraft = power/force
+    the Earths ability to bear/carry us over time
+    (A way to remember, not literal)
