--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -472,6 +472,12 @@
     Læreren deler opp klassen i grupper
     Veien deler seg her → The road splits here
 
+- question: "å klage"
+  answer: |
+    to complain (klager-klaget-har klaget)
+    Han klager hele tiden
+    Hun klaget på maten
+
 - question: "bærekraft"
   answer: |
     sustainability
