--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -485,3 +485,8 @@
     kraft = power/force
     the Earths ability to bear/carry us over time
     (A way to remember, not literal)
+
+- question: "nødvendig"
+  answer: |
+    necessary (unødvendig ?)
+
