--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -85,3 +85,5 @@
   answer: "Den eneste vennen jeg hadde var Kari"
 - question: "you make the most of it"
   answer: "Du må bare gjør det beste ut av det!"
+- question: "when we sit so close to each other"
+  answer: "når vi sitter så tett på hverandre"
