--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -87,3 +87,5 @@
   answer: "Du må bare gjør det beste ut av det!"
 - question: "when we sit so close to each other"
   answer: "når vi sitter så tett på hverandre"
+- question: "I did not know until yesterday that we were going to Sweden"
+  answer: "Jeg visste ikke før i går at vi skulle til Sverige"
