--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -71,6 +71,8 @@
   answer: "Underveis"
 - question: "To my surprise"
   answer: "Til min overraskelse"
+- question: "don't miss out"
+  answer: "ikke glipp av"
 - question: "Because of this"
   answer: "På grunn av dette"
 - question: "On the other hand"
