--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -91,3 +91,5 @@
   answer: "når vi sitter så tett på hverandre"
 - question: "I did not know until yesterday that we were going to Sweden"
   answer: "Jeg visste ikke før i går at vi skulle til Sverige"
+- question: "surrounded by beautiful nature"
+  answer: "omgitt av vakker natur"
