--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -93,3 +93,5 @@
   answer: "Jeg visste ikke før i går at vi skulle til Sverige"
 - question: "surrounded by beautiful nature"
   answer: "omgitt av vakker natur"
+- question: "Even small changes make a big difference"
+  answer: "Selv små endringer gjør en stor forskjell"
