--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -95,3 +95,6 @@
   answer: "omgitt av vakker natur"
 - question: "Even small changes make a big difference"
   answer: "Selv små endringer gjør en stor forskjell"
+- question: "In addition, I started reading more books in the evenings instead of watching TV"
+  answer: "I tillegg begynte jeg å lese flere bøker om kvelden i stedet for å se på TV"
+
