--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -489,3 +489,7 @@
 - question: "nødvendig"
   answer: |
     necessary (unødvendig ?)
+
+- question: "idrett"
+  answer: |
+    sports (feks: idrettsklubb)
