--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -97,4 +97,5 @@
   answer: "Selv små endringer gjør en stor forskjell"
 - question: "In addition, I started reading more books in the evenings instead of watching TV"
   answer: "I tillegg begynte jeg å lese flere bøker om kvelden i stedet for å se på TV"
-
+- question: "so that I have time for both work and relaxation."
+  answer: "slik at jeg har tid til både jobb og avslapning"
