--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -501,3 +501,10 @@
     Det stemmer → That's correct
     Tallene stemmer ikke.
     Navnet ditt stemmer med passet?
+
+- question: "å vurdere"
+  answer: |
+    to consider/assess/evaluate(vurderer-vurderte-har vurdert)
+    Jeg vurderer tilbudet(considering)
+    Vi må vurdere situasjonen(assess)
+    Jeg tar forslaget videre internt for vurdering
