--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -508,3 +508,8 @@
     Jeg vurderer tilbudet(considering)
     Vi må vurdere situasjonen(assess)
     Jeg tar forslaget videre internt for vurdering
+
+- question: "å tilhøre"
+  answer: |
+    to belong(tilhører-tilhørte-har tilhørt)
+    skogen tilhørte kommunen
