--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -512,4 +512,4 @@
 - question: "å tilhøre"
   answer: |
     to belong(tilhører-tilhørte-har tilhørt)
-    skogen tilhørte kommunen
+    skogen tilhører kommunen
