--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -99,3 +99,9 @@
   answer: "I tillegg begynte jeg å lese flere bøker om kvelden i stedet for å se på TV"
 - question: "so that I have time for both work and relaxation."
   answer: "slik at jeg har tid til både jobb og avslapning"
+- question: "I dont care"
+  answer: |
+    Jeg bryr meg ikke
+    kunne ikke brydd meg mindre
+    hvem bryr seg?
+
