--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -513,3 +513,9 @@
   answer: |
     to belong(tilhører-tilhørte-har tilhørt)
     skogen tilhører kommunen
+
+- question: "å orke"
+  answer: |
+    to have the energy/to handle (orker-orket-har orket)
+    Jeg orker ikke mer → I can't take it anymore
+    Hun orker ikke å lage middag i dag
