--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -519,3 +519,22 @@
     to have the energy/to handle (orker-orket-har orket)
     Jeg orker ikke mer → I can't take it anymore
     Hun orker ikke å lage middag i dag
+
+- question: "rett og slett"
+  answer: |
+    simply/just/ plain and simple
+    Det er rett og slett umulig
+
+- question: "nysgjerrig"
+  answer: |
+    curious/inquisitive (adjective)
+    Hun er nysgjerrig på nye ting (curious about)
+    Barn er ofte veldig nysgjerrige
+    nysgjerrighet (noun) → curiosity
+
+- question: "sjalu"
+  answer: |
+    jealous (adjective)
+    Han er sjalu på broren sin
+    Hun ble sjalu da hun så dem sammen
+    sjalusi (noun) → jealousy
