--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -2,6 +2,8 @@
   answer: "Det finnes ikke dårlig vær, bare dårlig klær."
 - question: "The famous one when you go out"
   answer: "Ut på tur, aldri sur"
+- question: "We wish our customers a very happy new year"
+  answer: "Vi ønsker våre kunder et riktig godt nytt år"
 - question: "I am not able to come up with something"
   answer: "Jeg klarer ikke å komme på noe"
 - question: "We cannot trust them / Don't trust anyone"
