--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -525,6 +525,12 @@
     simply/just/ plain and simple
     Det er rett og slett umulig
 
+- question: "stolt av"
+  answer: |
+    proud of (achievements, actions, results)
+    Han er stolt av jobben sin 
+    Når er du stolt av deg selv?
+
 - question: "nysgjerrig"
   answer: |
     curious/inquisitive (adjective)
