--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -544,3 +544,12 @@
     Han er sjalu på broren sin
     Hun ble sjalu da hun så dem sammen
     sjalusi (noun) → jealousy
+
+- question: "å gjenkjenne"
+  answer: |
+    to recognize (gjenkjenner-gjenkjente-har gjenkjent)
+    Jeg gjenkjenner stemmen din (your voice)
+    The prefix “gjen-” in norsk is like “re-” or again/back.
+    gjenta → repeat (do again)
+    gjenopprette → restore 
+    gjenbruke	→ reuse
