--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -106,4 +106,11 @@
     Jeg bryr meg ikke
     kunne ikke brydd meg mindre
     hvem bryr seg?
+- question: "Let me see.."
+  answer: |
+    Få se på det (Let me look at it)
+    Få se… jeg må tenke litt
+    Få se hvordan det går (Let’s see how it goes)
+  
+  
 
