--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -553,3 +553,12 @@
     gjenta → repeat (do again)
     gjenopprette → restore 
     gjenbruke	→ reuse
+
+- question: "å tvile"
+  answer: |
+    to doubt (tviler-tvilte-har tvilt)
+    Jeg tviler på historien hans
+    Hun tviler på at det vil fungere 
+    Det er ingen grunn til å tvile
+    Jeg begynner å tvile
+
