--- a/flashcards-vokabular.yaml
+++ b/flashcards-vokabular.yaml
@@ -562,3 +562,8 @@
     Det er ingen grunn til å tvile
     Jeg begynner å tvile
 
+- question: "kommer an på/kommer til å"
+  answer: |
+    depends on/going to 
+    Det kommer an på været.
+    Det kommer til å regne i morgen.
