--- a/flashcards-uttrykk.yaml
+++ b/flashcards-uttrykk.yaml
@@ -110,7 +110,7 @@
   answer: |
     Få se på det (Let me look at it)
     Få se… jeg må tenke litt
-    Få se hvordan det går (Let’s see how it goes)
+    Få se hvordan det går (Let's see how it goes)
 - question: "So as of today, we have no vacant positions"
   answer: "Så per i dag har vi ingen ledige stillinger"
 
